--- a/using-vim-mastering-the-dark-arts.org
+++ b/using-vim-mastering-the-dark-arts.org
@@ -1,6 +1,7 @@
 #+OPTIONS: num:nil toc:nil
 #+REVEAL_TRANS: Fade
 #+REVEAL_THEME: none
+#+REVEAL_EXTRA_CSS: style.css
 #+REVEAL_DEFAULT_SLIDE_BACKGROUND_SIZE: 1400px
 #+REVEAL_HLEVEL: 1
 #+TITLE: Using Vim: Mastering the Dark Arts
