--- a/using-vim-mastering-the-dark-arts.org
+++ b/using-vim-mastering-the-dark-arts.org
@@ -80,7 +80,7 @@ Exactly describe the changes you want to see.
    - =fA= Move to the next capital 'A' on this line
    - =F;= Move to the previous semi-colon on this line
      
-** Moveing in the document
+** Moving in the document
    
    - =}=  "Move to the next section"
    - =G=  "Move to the end of the document"
@@ -317,6 +317,7 @@ vim -c 'let @t=""' \
     - [[http://vimcasts.org/][Vimcasts.org]]
     - [[https://www.amazon.com/Practical-Vim-Thought-Pragmatic-Programmers/dp/1934356980][Practical Vim]]
     - [[https://www.vimgolf.com/][VimGolf]]
+    - #vim-users
 
 * Vimgolf
   
